K8s/2.3/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: home-work
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tools
  template:
    metadata:
      labels:
        app: tools
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        volumeMounts:
         - name: nginx-vol
           mountPath: /usr/share/nginx/html
        ports:
        - containerPort: 80
      - name: multitool
        image: wbitt/network-multitool
        ports:
        - containerPort: 8080
      volumes: 
        - name: nginx-vol
          configMap: 
           name: hw-configmap
