K8s/2.3/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: tools
  ports:
    - name: nginx
      port: 9001 
      targetPort: 80
      protocol: TCP
