K8s/2.3/nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: localhost
    http:
      paths:
      - path: /myapp
        pathType: Prefix
        backend:
          service:
            name: nginx-service
            port:
              number: 30001
  tls:
    - hosts:
      - localhost
      secretName: secret-ssl
